.provarCaches/00D5f000005vwGkEAI/objects/rstk__icsimsess__c.object
<CustomObject>
    <description>icsimsess__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>TEXT( rstk__icsimsess_simseq__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT( rstk__icsimsess_simseq__c ) + &apos; (&apos; +  rstk__icsimsess_desc__c + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icsimsess_addlqtyoh__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Additional Qty On Hand</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icsimsess_desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icsimsess_fcstdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Override Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icsimsess_forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Override Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icsimsess_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Simulated Sessions</relationshipLabel>
        <relationshipName>icsimsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsimsess_simseq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Simulation Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icsimsess_simuser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Simulation User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Simulated Sessions</relationshipLabel>
        <relationshipName>icsimsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsimsess_usage__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Average Usage Override</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Simulated Session</label>
    <listViews>
        <fullName>rstk__RS_Simulated_Sessions</fullName>
        <columns>NAME</columns>
        <columns>rstk__icsimsess_icitem__c</columns>
        <columns>rstk__icsimsess_desc__c</columns>
        <columns>rstk__icsimsess_usage__c</columns>
        <columns>rstk__icsimsess_forecast__c</columns>
        <columns>rstk__icsimsess_fcstdate__c</columns>
        <columns>rstk__icsimsess_simuser__c</columns>
        <columns>rstk__icsimsess_simseq__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Simulated Sessions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Simulated Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>